# nekotatsu

./: .gitignore  Cargo.toml  README.md  build.rs
.github/ISSUE_TEMPLATE/: failing-conversion.md  failing-conversion.yml
.github/workflows/: release.yml
gui/: Cargo.toml  build.rs
gui/src/: child_window.rs  main.rs
gui/ui/: Application.slint  ChildWindow.slint
nekotatsu-core/: Cargo.toml
nekotatsu-core/lua_derive/: Cargo.toml
nekotatsu-core/lua_derive/src/: lib.rs
nekotatsu-core/src/: config.rs  correction.luau  extensions.rs  kotatsu.rs  lib.rs  neko.backup.rs  neko.proto  script_interface.rs
src/: command.rs  extensions.rs  gui.rs  kotatsu.rs  lib.rs  main.rs  neko.backup.rs  neko.proto
tools/: Cargo.toml
tools/src/: main.rs
