workspace = { members = ["tools", "gui"] }
[package]
name = "nekotatsu"
version = "1.2.1"
resolver = "2"
edition="2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"], optional = true }
directories = { version = "5.0.1", optional = true }
flate2 = "1.0.28"
lazy_static = "1.4.0"
prost = "0.12.1"
regex = "1.10.2"
reqwest = { version = "0.11.24", features = ["blocking"], optional = true }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
toml = "0.8.19"
zip = { version = "0.6.6", features = ["deflate-zlib"] }

[features]
default = ["commands"] 
commands = ["clap", "directories", "reqwest"]

[[bin]]
name = "nekotatsu"
required-features = ["commands"]