workspace = { members = ["tools", "gui", "nekotatsu-core", "nekotatsu-core/lua_derive"] }
[package]
name = "nekotatsu"
version = "1.4.1"
resolver = "2"
edition="2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.0.28"
prost = "0.12.1"
regex = "1.10.2"
reqwest = { version = "0.11.24", features = ["blocking"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
toml = "0.8.19"
zip = { version = "3.0.0", default-features = false, features = ["deflate"] }
nekotatsu-core = { version = "0.2.0", path = "nekotatsu-core" }
etcetera = "0.10.0"
tracing-subscriber = "0.3.19"

[[bin]]
name = "nekotatsu"
