[package]
name = "gui"
version = "0.1.0"
resolver = "2"
edition = "2024"
repository.workspace = true

[[bin]]
name = "nekotatsu-gui"
path = "src/main.rs"

[dependencies]
nekotatsu = { path = ".." }
rfd = "0.15.3"
iced = { version = "0.14.0-dev", git = "https://github.com/iced-rs/iced", features = ["image", "markdown", "smol"] }
bitflags = "2.9.1"
tracing-subscriber = "0.3.19"
open = "5.3.2"
