[package]
name = "nekotatsu-core"
version = "0.2.0"
edition = "2021"

[dependencies]
flate2 = "1.0.28"
prost = "0.12.1"
regex = "1.10.2"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
zip = { version = "3.0.0", default-features = false, features = ["deflate"] }
toml = "0.8.19"
mlua = { version = "0.10.3", features = ["luau", "macros"] }
lua_derive = { path = "./lua_derive" }
url = "2.5.4"
tracing = "0.1.41"
thiserror = "2"
